# dpp-engine

./: .clippy.toml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  justfile  rust-toolchain.toml  rustfmt.toml
cli/: Cargo.toml  README.md
cli/src/: cli_args.rs  config.rs  credentials.rs  dispatch.rs  http.rs  main.rs
cli/src/commands/: bootstrap.rs  down.rs  evidence.rs  export.rs  facility.rs  import.rs  init.rs  key.rs  lifecycle.rs  list.rs  mod.rs  operator.rs  operator_id.rs  plugin.rs  profile.rs  publish.rs  schema.rs  status.rs  up.rs  update.rs  validate.rs  verify.rs  webhook.rs
cli/src/config/: mod.rs  model.rs  paths.rs  profiles.rs  secrets.rs
cli/src/console/: file_picker.rs  forms.rs  menu.rs  mod.rs  setup.rs  validators.rs
cli/src/console/menu/: api_keys.rs  environment.rs  facilities.rs  infrastructure.rs  mod.rs  operator.rs  operator_ids.rs  passports.rs  registry_identity.rs  schema.rs  verify.rs
cli/src/core/: infra.rs  mod.rs  onboarding.rs  passport.rs  plugin.rs  registry_identity.rs  schema.rs  types.rs  verify.rs  webhook.rs
cli/src/core/passport/: evidence.rs  export.rs  import.rs  lifecycle.rs  list.rs  mod.rs  publish.rs  validate.rs
cli/src/stateless/: mod.rs  render.rs
crates/dpp-common/: Cargo.toml  README.md
crates/dpp-common/src/: config.rs  event.rs  event_codes.rs  http_problem.rs  lib.rs  metrics.rs  plugin_admin.rs  request_id.rs  telemetry.rs  url_guard.rs
crates/dpp-dal/: Cargo.toml  README.md
crates/dpp-dal/src/: lib.rs
crates/dpp-dal/src/pg/: mod.rs  pool.rs  repo_api_key.rs  repo_audit.rs  repo_evidence.rs  repo_operator_config.rs  repo_passport.rs  repo_registry_identity.rs  repo_registry_sync.rs  repo_snapshot.rs  repo_transfer.rs  repo_webhook.rs
crates/dpp-dal/tests/: migration_repo_drift.rs  pg_integration.rs
crates/dpp-factor-data/: Cargo.toml  README.md
crates/dpp-factor-data/src/: lib.rs  manifest.rs  store.rs
crates/dpp-identity/: Cargo.toml  README.md
crates/dpp-identity/src/: config.rs  lib.rs  main.rs  router.rs  state.rs
crates/dpp-identity/src/handlers/: did_document.rs  health.rs  mod.rs  rotate_key.rs  sign.rs  verify.rs
crates/dpp-identity/src/middleware/: mod.rs  mtls.rs
crates/dpp-integrator/: Cargo.toml  README.md
crates/dpp-integrator/src/: config.rs  lib.rs  main.rs  router.rs  state.rs
crates/dpp-integrator/src/domain/: batch_runner.rs  csv_parser.rs  fields.rs  import_report.rs  matcher.rs  mod.rs  request.rs  validator.rs  xlsx_parser.rs
crates/dpp-integrator/src/handlers/: health.rs  import.rs  job_status.rs  mod.rs  templates.rs
crates/dpp-integrator/src/infra/: job_store.rs  mod.rs  vault_client.rs
crates/dpp-integrator/templates/: aluminium-v1.csv  battery-v1.csv  steel-v1.csv  textile-v1.csv  tyre-v1.csv
crates/dpp-node/: Cargo.toml  README.md
crates/dpp-node/benches/: nats_throughput.rs
crates/dpp-node/src/: config.rs  lib.rs  main.rs  plugins.rs  router.rs
crates/dpp-node/src/boot/: db.rs  mod.rs  tasks.rs  trust.rs
crates/dpp-node/src/infra/: drain.rs  eu_registry_sync.rs  mod.rs  nats_event_bus.rs  pg_job_store.rs  registry_drain.rs  ruleset.rs  s3_archive.rs  s3_snapshot.rs  snapshot_drain.rs  webhook_drain.rs
crates/dpp-node/tests/: import_job_store.rs  nats_event_bus.rs  registry_outbox.rs  s3_archive.rs  smoke.rs  snapshot_outbox.rs  webhook_outbox.rs
crates/dpp-plugin-host/: Cargo.toml  README.md
crates/dpp-plugin-host/benches/: wasm_invoke.rs
crates/dpp-plugin-host/src/: host.rs  host_funcs.rs  lib.rs  loader.rs  runtime.rs  sandbox.rs  tests.rs
crates/dpp-plugin-host/src/loader/: discover.rs  mod.rs  plugin.rs  signing.rs
crates/dpp-plugin-host/tests/: integration.rs  sdk_abi.rs
crates/dpp-render/: Cargo.toml  README.md
crates/dpp-render/examples/: preview.rs
crates/dpp-render/src/: carrier.rs  esc.rs  fields.rs  lib.rs  page.rs
crates/dpp-render/src/sections/: aluminium.rs  battery.rs  construction.rs  detergent.rs  electronics.rs  furniture.rs  mod.rs  steel.rs  textile.rs  toy.rs  tyre.rs
crates/dpp-resolver/: Cargo.toml  README.md
crates/dpp-resolver/src/: config.rs  jws_verification_tests.rs  lib.rs  main.rs  router.rs  state.rs
crates/dpp-resolver/src/domain/: id.rs  jws.rs  mod.rs
crates/dpp-resolver/src/handlers/: health.rs  mod.rs  resolve_by_gtin.rs  resolve_html.rs  resolve_json.rs  resolve_qr.rs
crates/dpp-resolver/src/infra/: cache.rs  did.rs  mod.rs
crates/dpp-resolver/tests/: resolver_e2e.rs
crates/dpp-seal/: Cargo.toml  README.md
crates/dpp-seal/src/: adapter.rs  lib.rs  tests.rs
crates/dpp-seal/src/csc/: client.rs  mod.rs  probe.rs  types.rs
crates/dpp-types/: Cargo.toml  README.md
crates/dpp-types/src/: api_key.rs  audit.rs  auth.rs  evidence.rs  lib.rs  operator.rs  registry_identity.rs  registry_sync.rs  snapshot.rs  transfer.rs  trust.rs  webhook.rs
crates/dpp-vault/: Cargo.toml  README.md
crates/dpp-vault/src/: config.rs  lib.rs  main.rs  public_view.rs  router.rs  state.rs
crates/dpp-vault/src/domain/: api_key_service.rs  mod.rs  operator_service.rs  registry_identity_service.rs  service.rs  webhook_service.rs
crates/dpp-vault/src/handlers/: api_keys.rs  archive.rs  create.rs  eol.rs  error.rs  evidence.rs  find_by_identity.rs  health.rs  history.rs  info.rs  lint.rs  list.rs  mod.rs  node_state.rs  operator.rs  plugins.rs  public_read.rs  publish.rs  (+8 more)
crates/dpp-vault/tests/: api_key_scope.rs  api_keys_crud.rs  audit_history.rs  auth_tests.rs  battery.rs  compliance_tests.rs  continuity_snapshot.rs  cross_repo_lifecycle.rs  error_paths.rs  evidence_api.rs  evidence_dossier.rs  evidence_export.rs  facility_operator_stamping.rs  facility_retire.rs  find_by_identity.rs  health_info.rs  integration_test.rs  lint_findings.rs  list_and_search.rs  operator_config.rs  operator_identifier_retire.rs  publish_serve_cycle.rs  registry_identity_governance.rs  suspension.rs  textile.rs  validation_failures.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_csv.rs  verify_dossier_json.rs
(+160 files in other folders)
