[workspace]
resolver = "2"
members = [
    "crates/dpp-types",
    "crates/dpp-dal",
    "crates/dpp-vault",
    "crates/dpp-identity",
    "crates/dpp-render",
    "crates/dpp-resolver",
    "crates/dpp-integrator",
    "crates/dpp-common",
    "crates/dpp-plugin-host",
    "crates/dpp-node",
    "crates/dpp-seal",
    "crates/dpp-factor-data",
    "cli",
]

[workspace.package]
version     = "0.7.0"
edition     = "2024"
authors     = ["Odal Node <dev@odal-node.io>"]
license     = "BSL-1.1"
repository  = "https://github.com/odal-node/dpp-engine"
rust-version = "1.96"

# ---------------------------------------------------------------------------
# Debug-build profile
#
# `dpp-node`'s integration test binaries link 250+ object files across wasmtime,
# aws-lc, sqlx and the AWS SDK. With full DWARF, linking several of them in
# parallel exhausts memory on a 16 GB machine and the build dies at the *last*
# CI stage — as `LINK : fatal error LNK1102: out of memory`, or, when rustc is
# the one that runs out first, as a bare `STATUS_STACK_BUFFER_OVERRUN` abort
# with no diagnostic. Both read as a code failure and are not one.
#
# `line-tables-only` keeps what this workspace actually debugs with — function
# names, file and line numbers in backtraces and panics — and drops the
# variable-level DWARF that makes those links enormous. The cost is variable
# inspection under a step debugger, which is not how this codebase is worked on.
# `test` inherits from `dev`, so this covers test binaries too.
#
# Raise this back to full debug only with a plan for the link memory.
# ---------------------------------------------------------------------------
[profile.dev]
debug = "line-tables-only"

# ---------------------------------------------------------------------------
# Shared dependency versions — crates inherit these with `workspace = true`
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Core crates — consumed from crates.io (dpp-core is published independently at 0.9.0).
dpp-domain = "0.10.0"

# Engine-wide types (tenant, auth, audit, API keys) — engine-internal crate.
dpp-types = { path = "crates/dpp-types" }
dpp-crypto        = "0.10.0"
# KeyStore lives in dpp-core/dpp-crypto; the identity service crate is dpp-identity
# (dir: crates/dpp-identity, pkg: dpp-identity).
dpp-digital-link  = "0.10.0"
dpp-plugin-traits = "0.10.0"
dpp-registry      = "0.10.0"
dpp-calc          = "0.10.0"
dpp-rules         = { version = "0.10.0", features = ["bundle"] }

# Web framework
axum         = { version = "0.8", features = ["macros", "multipart"] }
tokio        = { version = "1", features = ["full"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["trace", "cors", "compression-br", "request-id", "catch-panic"] }
hyper        = { version = "1", features = ["full"] }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_with   = "3"
serde_jcs    = "0.1"  # RFC 8785 JSON Canonicalisation — audit-chain hashing

# Database (sqlx lives in dpp-dal — not declared at workspace level)

# Compression
flate2       = "1"

# Identity & cryptography
ring         = "0.17"
base64       = "0.22"
hex          = "0.4"
sha2         = "0.10"
hmac         = "0.12"
subtle       = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
zeroize      = { version = "1", features = ["derive"] }
aes-gcm      = "0.10"
rand         = "0.8"

# JWT / OAuth
jsonwebtoken = "9"

# Schema validation
jsonschema   = "0.17"

# QR code
qrcode       = "0.12"
image        = "0.24"

# HTTP client
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
url          = "2"

# Cache
redis        = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Telemetry
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# Benchmarking
criterion    = { version = "0.5", features = ["html_reports"] }

# Utilities
uuid         = { version = "1", features = ["v7", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "1"
anyhow       = "1"
async-trait  = "0.1"
dotenvy      = "0.15"

# Event bus
async-nats   = "0.49"

# AWS S3 (MinIO / R2 compatible)
aws-sdk-s3   = "1"

# CSV / XLSX parsing (integrator)
calamine     = "0.22"
csv          = "1.3"

# CLI
clap         = { version = "4", features = ["derive", "env"] }
indicatif    = "0.17"
toml         = "0.8"
inquire      = "0.7"
console      = "0.15"

# Native OS file picker for `Passports › Import`. `xdg-portal` (not gtk3) keeps
# Linux/Docker builds free of GTK dev libs; native backends used on Win/macOS.
rfd          = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal", "common-controls-v6"] }
# ashpd (rfd's xdg-portal backend) pulls in wayland-client on Linux/BSD. Force
# "dlopen" so wayland-sys loads libwayland-client.so at runtime instead of
# requiring wayland-client.pc + headers at build time (CI/Docker images don't
# have them). This is a feature-unification-only dep — cli/Cargo.toml pulls it
# in on the same targets ashpd does; see wayland-sys's build.rs, which skips
# its pkg-config probe entirely once CARGO_FEATURE_DLOPEN is set.
wayland-client = { version = "0.31", features = ["dlopen"] }
dirs         = "5"

# Integration tests
testcontainers        = "0.21"
testcontainers-modules = { version = "0.9", default-features = false }

# Property-based testing (dev-only)
proptest              = "1"

# Wasm plugin runtime
wasmtime       = { version = "46", default-features = false, features = ["cranelift", "async", "component-model"] }
wasmtime-wasi  = "45"

# GS1 / JSON-LD
json-ld        = "0.21"
