[package]
name        = "dpp-cli"
description = "Odal Node management CLI for self-hosted installations"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "odal"
path = "src/main.rs"

[dependencies]
clap        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
indicatif   = { workspace = true }
toml        = { workspace = true }
csv         = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
base64      = { workspace = true }
inquire     = { workspace = true }
console     = { workspace = true }
rfd         = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile    = "3"
