[package]
name        = "dpp-cli"
description = "Odal Node management CLI for self-hosted installations"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "odal"
path = "src/main.rs"

[dependencies]
dpp-types   = { workspace = true }
clap        = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
indicatif   = { workspace = true }
toml        = { workspace = true }
csv         = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
base64      = { workspace = true }
inquire     = { workspace = true }
console     = { workspace = true }
rfd         = { workspace = true }
dirs        = { workspace = true }

# Forces wayland-client's "dlopen" feature (see workspace Cargo.toml) on the
# same targets rfd's ashpd backend compiles for, so the wayland-sys build
# script never probes pkg-config for wayland-client.pc.
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
wayland-client = { workspace = true }

[dev-dependencies]
tempfile    = "3"
