[package]
name        = "dpp-common"
description = "Shared telemetry, config helpers, and HTTP error serialisation for Odal Node services"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "dpp_common"
path = "src/lib.rs"

[dependencies]
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
metrics             = { workspace = true }
tower-http          = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
dotenvy             = { workspace = true }
axum                = { workspace = true }
async-trait         = { workspace = true }
uuid                = { workspace = true }
chrono              = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
proptest            = { workspace = true }
