[package]
name        = "dpp-identity"
description = "HTTP service for did:web identity management and Ed25519 JWS signing"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "dpp_identity_service"
path = "src/lib.rs"

[[bin]]
name = "dpp-identity"
path = "src/main.rs"

[dependencies]
dpp-domain  = { workspace = true }
dpp-crypto  = { workspace = true }
dpp-common  = { path = "../dpp-common" }

axum             = { workspace = true }
base64           = { workspace = true }
tokio            = { workspace = true }
tower            = { workspace = true }
tower-http       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
dotenvy          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[dev-dependencies]
uuid          = { version = "1", features = ["v4"] }
tracing-test  = "0.2"
tower         = { version = "0.4", features = ["util"] }
serial_test   = "3"
