[package]
name        = "dpp-resolver"
description = "Public QR code resolver — Axum server and WASM/Cloudflare Workers edge target"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "dpp-resolver"
path = "src/main.rs"

[lib]
name  = "dpp_resolver"
crate-type = ["rlib"]
# cdylib (Cloudflare Workers edge target) re-added when Workers deployment is active

[dependencies]
dpp-domain        = { workspace = true }
dpp-crypto        = { workspace = true }
dpp-digital-link  = { workspace = true }
dpp-common        = { path = "../dpp-common" }
dpp-render        = { path = "../dpp-render" }

axum          = { workspace = true }
tokio         = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
redis         = { workspace = true }
deadpool-redis = { workspace = true }
qrcode        = { workspace = true }
image         = { workspace = true }
reqwest       = { workspace = true }
base64        = { workspace = true }
ed25519-dalek = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
dotenvy       = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
metrics             = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tower         = { version = "0.4", features = ["util"] }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
