[package]
name        = "dpp-types"
description = "Platform-wide domain types for Odal Node (tenant, auth, audit, API keys)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "dpp_types"
path = "src/lib.rs"

[dependencies]
dpp-domain  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
