[package]
name        = "dpp-types"
description = "Platform-wide domain types for Odal Node (tenant, auth, audit, API keys)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "dpp_types"
path = "src/lib.rs"

[dependencies]
dpp-domain  = { workspace = true }
# Supplies the canonical JCS content hasher. Both the audit chain and the
# evidence dossier use it, so this crate no longer needs serde_jcs/sha2/hex of
# its own — and cannot grow a second, drifting implementation.
dpp-rules   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
